# ddd-cosmic-python

./: .env  .gitignore  README.md  config.py  pyproject.toml
src/: __init__.py
src/adapters/: orm.py  repository.py
src/domain/: exceptions.py  model.py
src/entrypoints/: flask_app.py
src/service_layer/: services.py
tests/: conftest.py
tests/adapters/: mock_repository.py  test_repository.py
tests/domain/: mock_models.py  test_consistency.py
